faq section fixed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>DuckDuckGo — Privacy, simplified</title>
 
-    <link rel = "icon" href = "assets/images/favicon.png" type = "image/png">
+    <link rel="icon" href = "assets/images/favicon.png" type = "image/png">
 		<link rel="stylesheet" href="assets/css/style.min.css">
 	</head>
 	<body>
@@ -101,7 +101,7 @@
         </div>
 			</div>
 		</nav>
-    <!-- end of navbar -->
+    <!-- Navbar end -->
 
     <!-- main -->
     <main>
